...
        android:id="@+id/btnStringRequest"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="55dp"
        android:text="Users"
        app:layout_constraintEnd_toEndOf="@+id/btnFlashCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFlashCard" />

    <Button
        android:id="@+id/btnJsonObjRequest"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="Create users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMapTest" />

    <Button
        android:id="@+id/btnFlashCard"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="73dp"
...
        android:layout_marginEnd="20dp"
        android:text="Admin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnJsonObjRequest" />

    <Button
        android:id="@+id/btnSIgnOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="SIgnOut"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:layout_marginTop="40dp"
        android:text="Enemy Creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStringRequest" />

    <Button
        android:id="@+id/anouncments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="anouncments"
        app:layout_constraintStart_toStartOf="parent"
...
