<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
tools:context=".ChatActivity"
android:layout_height="match_parent"
android:layout_width="match_parent"
android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:layout_height="50dp"
        android:layout_width="320dp"
        android:hint="message"
        android:textSize="20dp"
        android:id="@+id/msgEdt" />
</LinearLayout>


    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="550dp">

        <TextView
            android:id="@+id/tx1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="The Conversation will appear here:\n"
            android:textSize="20dp" />
    </ScrollView>

    <Button
        android:id="@+id/ChatBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back" />


</androidx.appcompat.widget.LinearLayoutCompat>